objects/Billing_Account__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Account_Name__c</fullName>
        <description>This field is used to save cleansed Billing Account Name</description>
        <inlineHelpText>This field shows the cleansed version of the Billing Account Name.</inlineHelpText>
        <label>Cleansed Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Unomy_Company_Name__c</fullName>
        <description>This field is used to save cleansed version of unomy company name by removing suffix,prefix and special character based on AccountCleansingSetting  sales console setting</description>
        <inlineHelpText>This field is used to save cleansed version of unomy company name by removing suffix,prefix and special character based on AccountCleansingSetting  sales console setting</inlineHelpText>
        <label>Cleansed Unomy Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conventional_Name__c</fullName>
        <label>Conventional Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Billing_Account_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>External Billing Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Status__c</fullName>
        <description>This field determine whether or not the company is active in WeWork spaces</description>
        <inlineHelpText>This field determine whether or not the company is active in WeWork spaces</inlineHelpText>
        <label>ID Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Past Member</fullName>
                </value>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>inactive</fullName>
                    <default>true</default>
                    <label>inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the status of Billing Account - Checked for Active and Unchecked for In-Active</description>
        <inlineHelpText>Show the status of Billing Account either Active or Inactive</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Id__c</fullName>
        <description>Legacy Account Id of Deleted Account</description>
        <inlineHelpText>Legacy Account Id of Deleted Account</inlineHelpText>
        <label>Legacy Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Legacy Account Owner of Billing Account</description>
        <inlineHelpText>Legacy Account Owner of Billing Account</inlineHelpText>
        <label>Legacy Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts (Legacy Account)</relationshipLabel>
        <relationshipName>Billing_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Of_Lost_Opportunities__c</fullName>
        <label>Number Of Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Open_Opportunities__c</fullName>
        <label>Number Of Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Total_Opportunities__c</fullName>
        <label>Number Of Total Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Won_Opportunities__c</fullName>
        <label>Number Of Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>Number of Full Time Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Record_Type__c</fullName>
        <formula>IF(ISPICKVAL(Parent_Account__r.Account_Type__c, 'Org'),Parent_Account__r.RecordType.Name, Parent_Account__r.Parent.RecordType.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to the Parent Account</description>
        <inlineHelpText>This is lookup to the Parent Account</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Org__c</fullName>
        <description>Shows the name of the first Org found in the multi-level hierarchy.</description>
        <formula>Parent_Account__r.Parent_Org_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the name of the first Org found in the multi-level hierarchy.</inlineHelpText>
        <label>Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Email__c</fullName>
        <description>Primary Member's email. Managed by Process: Billing Account - Update Primary Member Fields</description>
        <externalId>true</externalId>
        <label>Primary Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Name__c</fullName>
        <description>Primary Member's name. Managed by Process: Billing Account - Update Primary Member Fields</description>
        <externalId>true</externalId>
        <label>Primary Member Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the main point of contact for the Billing Account.</description>
        <inlineHelpText>Person at the member company responsible for managing the membership: invoices, key card replacements, MENA account manager tab. Responsible for signing legal agreement (unless an authorized signatory is designated).</inlineHelpText>
        <label>Primary Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is unique,case sensitive auto generated field used to identify Billing Account record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is unique,case sensitive auto generated field used to identify Billing Account record.</inlineHelpText>
        <label>UUID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows the Ultimate Org when we have the multi-level hierarchy.</description>
        <inlineHelpText>Shows the Ultimate Org when we have the multi-level hierarchy.</inlineHelpText>
        <label>Ultimate Parent Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts (Ultimate Parent Org Name)</relationshipLabel>
        <relationshipName>Billing_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unomy_Acquisitions__c</fullName>
        <label>Unomy Acquisitions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_Global_Rank__c</fullName>
        <label>Unomy Alexa Global Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_US_Rank__c</fullName>
        <label>Unomy Alexa US Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Available_Contacts__c</fullName>
        <label>Unomy Available Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Email__c</fullName>
        <label>Unomy Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unomy Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Name__c</fullName>
        <label>Unomy Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Phone__c</fullName>
        <label>Unomy Company Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Max__c</fullName>
        <label>Unomy Company Size Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Min__c</fullName>
        <label>Unomy Company Size Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size__c</fullName>
        <label>Unomy Company Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Stock_Symbol__c</fullName>
        <label>Unomy Company Stock Symbol</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Website__c</fullName>
        <label>Unomy Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Administration__c</fullName>
        <label>Unomy Contacts Job Administration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Consulting__c</fullName>
        <label>Unomy Contacts Job Consulting</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Creative__c</fullName>
        <label>Unomy Contacts Job Creative</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Engineering__c</fullName>
        <label>Unomy Contacts Job Engineering</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Finance__c</fullName>
        <label>Unomy Contacts Job Finance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Human_Resources__c</fullName>
        <label>Unomy Contacts Job Human Resources</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_IT__c</fullName>
        <label>Unomy Contacts Job IT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Legal__c</fullName>
        <label>Unomy Contacts Job Legal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Marketing__c</fullName>
        <label>Unomy Contacts Job Marketing</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Medical__c</fullName>
        <label>Unomy Contacts Job Medical</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Operations__c</fullName>
        <label>Unomy Contacts Job Operations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Other__c</fullName>
        <label>Unomy Contacts Job Other</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Product__c</fullName>
        <label>Unomy Contacts Job Product</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Sales__c</fullName>
        <label>Unomy Contacts Job Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Support__c</fullName>
        <label>Unomy Contacts Job Support</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Training__c</fullName>
        <label>Unomy Contacts Job Training</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_C_Level__c</fullName>
        <label>Unomy Contacts Mgmt C Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Directors__c</fullName>
        <label>Unomy Contacts Mgmt Directors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Managers__c</fullName>
        <label>Unomy Contacts Mgmt Managers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Non_Managers__c</fullName>
        <label>Unomy Contacts Mgmt Non Managers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_VP_Level__c</fullName>
        <label>Unomy Contacts Mgmt VP Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Max__c</fullName>
        <label>Unomy Estimated Revenue Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Min__c</fullName>
        <label>Unomy Estimated Revenue Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue__c</fullName>
        <label>Unomy Estimated Revenue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Facebook_Likes__c</fullName>
        <label>Unomy Facebook Likes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Founded__c</fullName>
        <label>Unomy Founded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Industries__c</fullName>
        <label>Unomy Industries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Industry__c</fullName>
        <label>Unomy Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Investments__c</fullName>
        <label>Unomy Investments</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Investors__c</fullName>
        <label>Unomy Investors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Latest_Round__c</fullName>
        <label>Unomy Latest Round</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_Address__c</fullName>
        <label>Unomy Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_City__c</fullName>
        <label>Unomy Location City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_Country__c</fullName>
        <label>Unomy Location Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_State__c</fullName>
        <label>Unomy Location State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Metadata__c</fullName>
        <label>Unomy Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Total_Funding_Full__c</fullName>
        <label>Unomy Total Funding Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Total_Funding__c</fullName>
        <label>Unomy Total Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Twitter_Followers__c</fullName>
        <label>Unomy Twitter Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Updated_DateTime__c</fullName>
        <description>The date/time a record was updated from Unomy</description>
        <label>Unomy Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unomy_User__c</fullName>
        <label>Unomy User</label>
        <type>TextArea</type>
    </fields>
    <description>All Billing account is moved to this Billing Account object it help Sales people to identify Org and Sales account easily and reduce the clutter of 100s of Accounts with same name.</description>
    <label>Billing Account</label>
    <nameField>
        <label>Billing Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Cant_change_name_or_Primary_member</fullName>
        <active>true</active>
        <description>If Account has at least 1 Closed Won opportunity, nobody should be able to change the Name or primary Member.</description>
        <errorConditionFormula>AND(Number_Of_Won_Opportunities__c &gt;0, $Profile.Id &lt;&gt; "00eF0000000aice",$Profile.Id &lt;&gt; "00eF0000001V50Z", $Profile.Id &lt;&gt; "00eF0000000Rfpc", OR(ISCHANGED( Primary_Member__c), ISCHANGED( Name )), TEXT(ID_Status__c)='active')</errorConditionFormula>
        <errorMessage>You can't change the Name or Primary Member for this Account. Please contact your System Administrator.</errorMessage>
    </validationRules>
</CustomObject>